# music-rater

./: Cargo.toml
src/: events.rs  main.rs  playlist.rs  state.rs
