[package]
name = "music-rater"
version = "0.1.0"
authors = ["Ben Boeckel <mathstuf@gmail.com>"]
edition = "2018"

[dependencies]
itertools = "0.10"
lewton = "0.10"
ogg = "0.8"
rodio = { version = "0.14", default-features = false, features = ["vorbis"] }
termion = "1.5"
thiserror = "1.0"
tui = "0.16"
